syntax = "proto3";

option go_package = "bus";

package bus;

import "google/protobuf/any.proto";

service EventBus {
    rpc Subscribe(Topic) returns (stream Event) {}
    rpc GetLastSnapshot(Empty) returns (Event) {}
}

message Topic {
    string name = 1;
}

enum EventType {
    RAW_DATA = 0;
    CHANGE = 1;
    MULTIPLE_CHANGE = 2;
    RELOAD = 3;
}

message Event {
    EventType eventType = 1;
    google.protobuf.Any data = 2;
}

message RawBytesData {
    bytes data = 1;
}

message Empty {

}
